// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Video > Default > should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnScm jUKRYu"
  >
    <div
      class="sc-gsnScm ezwATA"
    >
      <div
        data-controls="true"
        data-loop="false"
        data-muted="false"
        data-url="example-url"
      >
        video-component
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Video > Default > should render correctly without thumbnail 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnScm jUKRYu"
  >
    <div
      class="sc-gsnScm ezwATA"
    >
      <div
        data-controls="true"
        data-loop="false"
        data-muted="false"
        data-url="example-url"
      >
        video-component
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Video > Modal > should close correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnScm jUKRYu"
  >
    <div
      class="sc-gsnScm ezwATA"
    >
      <button
        class="sc-jSMdHm bFHbXQ"
      >
        <div
          class="sc-gsnScm fKVHzT sc-eCYdKt KsdpT"
        >
          <span
            class="sc-bczSft gbfcOk"
            data-rc="LargeSystemIcon.Play"
          >
            <svg
              fill="none"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M23.2565 17.5126C24.2463 16.6758 24.2493 15.3216 23.2565 14.4823L9.7923 3.10005C8.80245 2.26326 8.00001 2.67968 8.00001 3.99293V28.002C8.00001 29.3319 8.79944 29.7342 9.7923 28.8948L23.2565 17.5126Z"
                fill="#F9C000"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <img
          src="example-thumbnail"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Video > Modal > should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnScm jUKRYu"
  >
    <div
      class="sc-gsnScm ezwATA"
    >
      <button
        class="sc-jSMdHm bFHbXQ"
      >
        <div
          class="sc-gsnScm fKVHzT sc-eCYdKt KsdpT"
        >
          <span
            class="sc-bczSft gbfcOk"
            data-rc="LargeSystemIcon.Play"
          >
            <svg
              fill="none"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M23.2565 17.5126C24.2463 16.6758 24.2493 15.3216 23.2565 14.4823L9.7923 3.10005C8.80245 2.26326 8.00001 2.67968 8.00001 3.99293V28.002C8.00001 29.3319 8.79944 29.7342 9.7923 28.8948L23.2565 17.5126Z"
                fill="#F9C000"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <img
          src="example-thumbnail"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Video Default should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR jicaaU"
  >
    <div
      class="sc-gswNZR gJxzFG"
    >
      <div
        data-controls="true"
        data-loop="false"
        data-muted="false"
        data-url="example-url"
      >
        video-component
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Video Default should render correctly without thumbnail 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR jicaaU"
  >
    <div
      class="sc-gswNZR gJxzFG"
    >
      <div
        data-controls="true"
        data-loop="false"
        data-muted="false"
        data-url="example-url"
      >
        video-component
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Video Modal should close correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR jicaaU"
  >
    <div
      class="sc-gswNZR gJxzFG"
    >
      <button
        class="sc-jSUZER iXDapD"
      >
        <div
          class="sc-gswNZR ijzHa-d sc-eDvSVe hSqznv"
        >
          <span
            class="sc-bcXHqe ffJoEj"
            data-rc="LargeSystemIcon.Play"
          >
            <svg>
              play.svg
            </svg>
          </span>
        </div>
        <img
          src="example-thumbnail"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Video Modal should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR jicaaU"
  >
    <div
      class="sc-gswNZR gJxzFG"
    >
      <button
        class="sc-jSUZER iXDapD"
      >
        <div
          class="sc-gswNZR ijzHa-d sc-eDvSVe hSqznv"
        >
          <span
            class="sc-bcXHqe ffJoEj"
            data-rc="LargeSystemIcon.Play"
          >
            <svg>
              play.svg
            </svg>
          </span>
        </div>
        <img
          src="example-thumbnail"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
